Adding unit tests
- starting with glsl::lexer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(glsl-parser)
 
-option(GLSL_PARSER_BUILD_EXAMPLE_APP "Toggle whether to build an example GLSL parser executable"
-    OFF)
+option(GLSL_PARSER_BUILD_EXAMPLE_APP "Toggle whether to build an example GLSL parser executable" OFF)
+option(GLSL_PARSER_BUILD_TESTS "Toggle to build unit tests & enable testing" ON)
 
 # place binaries and libraries according to GNU standards
 include(GNUInstallDirs)
@@ -12,17 +12,17 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
 
 
 set(glslParserSourceList 
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/ast.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/ast.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/debug.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/ast.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/util.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/lexemes.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/lexer.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/util.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/lexemes.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/lexer.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/util.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/debug.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/debug.hpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/parser.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/lexer.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/parser.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/glslParser/parser.hpp
 )
 
 add_library(glslParser SHARED
@@ -50,3 +50,19 @@ if(${GLSL_PARSER_BUILD_EXAMPLE_APP})
     )
     target_link_libraries(glslParserFrontEnd PRIVATE glslParser)
 endif()
+
+#------------------------------------------------------------------------------
+# Unit tests
+#------------------------------------------------------------------------------
+
+if(${GLSL_PARSER_BUILD_TESTS})
+    enable_testing()
+    find_package(GTest REQUIRED)
+
+    set(GTEST_ROOT "${CMAKE_BINARY_DIR}/bin")
+    add_executable(unit_tests test/unit_tests.cpp test/lexer_test.cpp)
+    add_test(NAME AllTests COMMAND "$<TARGET_FILE:unit_tests>")
+    target_link_libraries(unit_tests ${GTEST_BOTH_LIBRARIES} glslParser)
+endif()
+
+
